// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Avatar Avatar link 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
    >
      <a
        className="avatar size-xl"
        href={true}
      >
        <img
          alt="Anna Barbieri"
          src="https://randomuser.me/api/portraits/women/41.jpg"
        />
      </a>
      <a
        className="avatar size-xl avatar-red"
        href={true}
      >
        <p
          aria-hidden="true"
        >
          MR
        </p>
        <span
          className="sr-only"
        >
          Mario Rossi
        </span>
      </a>
      <a
        className="avatar size-xl"
        href={true}
      />
      <a
        className="avatar size-xl"
        href={true}
      >
        <svg
          className="icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </a>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Avatar Avatar link with Tooltip 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
    >
      <a
        className="avatar size-xl"
        href={true}
        id="Example1"
      >
        <img
          alt="Anna Barbieri"
          src="https://randomuser.me/api/portraits/women/41.jpg"
        />
      </a>
      <a
        className="avatar size-xl avatar-red"
        href={true}
        id="Example2"
      >
        <p
          aria-hidden="true"
        >
          MR
        </p>
        <span
          className="sr-only"
        >
          Mario Rossi
        </span>
      </a>
      <a
        className="avatar size-xl"
        href={true}
        id="Example3"
      />
      <a
        className="avatar size-xl"
        href={true}
        id="Example4"
      >
        <svg
          className="icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </a>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Avatar Avatar with additional text 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
    >
      <div
        className="avatar-wrapper avatar-extra-text"
      >
        <div
          className="avatar size-xl"
        >
          <img
            alt="Mario Rossi"
            src="https://randomuser.me/api/portraits/men/33.jpg"
          />
        </div>
        <div
          className="extra-text"
        >
          <h4>
            <a
              href="#"
            >
              Mario Rossi
            </a>
          </h4>
          <time
            dateTime="2018-09-15"
          >
            15 Set 2018
          </time>
        </div>
      </div>
      <div
        className="avatar-wrapper avatar-extra-text"
      >
        <div
          className="avatar size-xl"
        >
          <img
            alt="Guilia Neri"
            src="https://randomuser.me/api/portraits/women/33.jpg"
          />
        </div>
        <div
          className="extra-text"
        >
          <h4>
            Guilia Neri
          </h4>
          <p>
            Lorem ipsum dolor
          </p>
        </div>
      </div>
      <div
        className="avatar-wrapper avatar-extra-text"
      >
        <div
          className="avatar size-xl"
        >
          <img
            alt="Michele Dotti"
            src="https://randomuser.me/api/portraits/men/15.jpg"
          />
        </div>
        <div
          className="extra-text"
        >
          <h4>
            <a
              href="#"
            >
              Micehele Dotti
            </a>
          </h4>
          <time
            dateTime="2018-09-15"
          >
            15 Mag 2018
          </time>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Avatar Avatar with icon 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
    >
      <div
        className="avatar size-xs"
      >
        <svg
          className="icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
      <div
        className="avatar size-sm"
      >
        <svg
          className="icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
      <div
        className="avatar"
      >
        <svg
          className="icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
      <div
        className="avatar size-lg"
      >
        <svg
          className="icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
      <div
        className="avatar size-xl"
      >
        <svg
          className="icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
      <div
        className="avatar size-xxl"
      >
        <svg
          className="icon"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Avatar Avatar with image 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
    >
      <div
        className="avatar size-xs"
      >
        <img
          alt="Mario Rossi"
          src="https://randomuser.me/api/portraits/men/46.jpg"
        />
      </div>
      <div
        className="avatar size-sm"
      >
        <img
          alt="Luisa Neri"
          src="https://randomuser.me/api/portraits/women/44.jpg"
        />
      </div>
      <div
        className="avatar"
      >
        <img
          alt="Gioacchino Romani"
          src="https://randomuser.me/api/portraits/men/43.jpg"
        />
      </div>
      <div
        className="avatar size-lg"
      >
        <img
          alt="Anna Barbieri"
          src="https://randomuser.me/api/portraits/women/41.jpg"
        />
      </div>
      <div
        className="avatar size-xl"
      >
        <img
          alt="Carlo Poli"
          src="https://randomuser.me/api/portraits/men/33.jpg"
        />
      </div>
      <div
        className="avatar size-xxl"
      >
        <img
          alt="Giovanna Ferrero"
          src="https://randomuser.me/api/portraits/women/24.jpg"
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Avatar Avatar with text 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
    >
      <div
        className="avatar size-xs"
      >
        <p
          aria-hidden="true"
        >
          MR
        </p>
        <span
          className="sr-only"
        >
          Mario Rossi
        </span>
      </div>
      <div
        className="avatar size-sm"
        type="primary"
      >
        <p
          aria-hidden="true"
        >
          M
        </p>
        <span
          className="sr-only"
        >
          Mario Rossi
        </span>
      </div>
      <div
        className="avatar"
        type="secondary"
      >
        <p
          aria-hidden="true"
        >
          M
        </p>
        <span
          className="sr-only"
        >
          Mario Rossi
        </span>
      </div>
      <div
        className="avatar size-lg"
        type="green"
      >
        <p
          aria-hidden="true"
        >
          M
        </p>
        <span
          className="sr-only"
        >
          Mario Rossi
        </span>
      </div>
      <div
        className="avatar size-xl"
        type="orange"
      >
        <p
          aria-hidden="true"
        >
          M
        </p>
        <span
          className="sr-only"
        >
          Mario Rossi
        </span>
      </div>
      <div
        className="avatar size-xxl"
        type="red"
      >
        <p
          aria-hidden="true"
        >
          M
        </p>
        <span
          className="sr-only"
        >
          Mario Rossi
        </span>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Avatar.Avatar groups.List Media List 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list avatar-group"
      >
        <li>
          <a
            className="list-item"
            href="#"
          >
            <div
              className="avatar size-md"
            >
              <img
                alt="Mario Rossi"
                src="https://randomuser.me/api/portraits/men/43.jpg"
              />
            </div>
            <span>
              Mario Rossi
            </span>
          </a>
        </li>
        <li>
          <a
            className="list-item"
            href="#"
          >
            <div
              className="avatar size-md avatar-green"
            >
              <p
                aria-hidden="true"
              >
                AG
              </p>
            </div>
            <span>
              Arianna Gallo
            </span>
          </a>
        </li>
        <li>
          <a
            className="list-item"
          >
            <div
              className="avatar size-md avatar-primary"
            >
              <p
                aria-hidden="true"
              >
                S
              </p>
            </div>
            <span>
              Sara Ghione
            </span>
          </a>
        </li>
        <li>
          <a
            className="list-item"
          >
            <div
              className="avatar size-md"
            >
              <svg
                className="icon"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 13a4 4 0 004-4V6a4 4 0 00-8 0v3a4 4 0 004 4zM9 6a3 3 0 016 0v3a3 3 0 01-6 0zm11 16h-1a7 7 0 00-14 0H4a8 8 0 0116 0z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <span>
              Antonio Esposito
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Avatar.Avatar groups.List Small List 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="link-list-wrapper"
    >
      <ul
        className="link-list avatar-group"
      >
        <li>
          <a
            className="list-item"
            href="#"
          >
            <div
              className="avatar size-sm"
            >
              <img
                alt="Mario Rossi"
                src="https://randomuser.me/api/portraits/men/43.jpg"
              />
            </div>
            <span>
              Mario Rossi
            </span>
          </a>
        </li>
        <li>
          <a
            className="list-item"
            href="#"
          >
            <div
              className="avatar size-sm avatar-orange"
            >
              <p
                aria-hidden="true"
              >
                A
              </p>
            </div>
            <span>
              Arianna Gallo
            </span>
          </a>
        </li>
        <li>
          <a
            className="list-item"
          >
            <div
              className="avatar size-sm avatar-red"
            >
              <p
                aria-hidden="true"
              >
                S
              </p>
            </div>
            <span>
              Sara Ghione
            </span>
          </a>
        </li>
        <li>
          <a
            className="list-item"
          >
            <div
              className="avatar size-sm"
            >
              <svg
                className="icon"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 13a4 4 0 004-4V6a4 4 0 00-8 0v3a4 4 0 004 4zM9 6a3 3 0 016 0v3a3 3 0 01-6 0zm11 16h-1a7 7 0 00-14 0H4a8 8 0 0116 0z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <span>
              Antonio Esposito
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Avatar.Avatar groups.Overlapping Avatars Medium Overlaid Avatars 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="avatar-group-stacked"
    >
      <li>
        <a
          className="avatar size-md"
          href={true}
        >
          <img
            alt="Arianna Rossi"
            src="https://randomuser.me/api/portraits/women/12.jpg"
          />
        </a>
      </li>
      <li>
        <a
          className="avatar size-md"
          href={true}
        >
          <img
            alt="Giulio Neri"
            src="https://randomuser.me/api/portraits/men/13.jpg"
          />
        </a>
      </li>
      <li>
        <a
          className="avatar size-md avatar-orange"
          href={true}
        >
          <p
            aria-hidden="true"
          >
            B
          </p>
          <span
            className="sr-only"
          >
            Barbera Tosi
          </span>
        </a>
      </li>
      <li>
        <a
          className="avatar size-md avatar-red"
          href={true}
        >
          <p
            aria-hidden="true"
          >
            R
          </p>
          <span
            className="sr-only"
          >
            Roberto Milano
          </span>
        </a>
      </li>
      <li>
        <a
          className="avatar size-md"
          href="#"
        >
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </a>
      </li>
      <li>
        <div
          className="avatar size-md avatar-dropdown"
        >
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="btn btn-dropdown dropdown-toggle"
              data-toggle="dropdown"
              href="#"
              id="dropdownMenuLink2"
              onClick={[Function]}
            >
              <span
                className="sr-only"
              >
                Visualizza altri 4 utenti
              </span>
              <span
                aria-hidden="true"
              >
                +4
              </span>
            </button>
            <div
              aria-hidden={true}
              className="dropdown-menu"
              role="menu"
              tabIndex="-1"
            >
              <div
                className="link-list-wrapper"
              >
                <ul
                  className="link-list"
                >
                  <li>
                    <a
                      className="list-item"
                    >
                      <div
                        className="avatar size-md"
                      >
                        <img
                          alt="Mario Rossi"
                          src="https://randomuser.me/api/portraits/men/46.jpg"
                        />
                      </div>
                      <span>
                        Mario Rossi
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      className="list-item"
                    >
                      <div
                        className="avatar size-md avatar-green"
                      >
                        <p
                          aria-hidden="true"
                        >
                          A
                        </p>
                      </div>
                      <span>
                        Arianna Gello
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      className="list-item"
                    >
                      <div
                        className="avatar size-md avatar-primary"
                      >
                        <p
                          aria-hidden="true"
                        >
                          S
                        </p>
                      </div>
                      <span>
                        Sara Ghioni
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      className="list-item"
                    >
                      <div
                        className="avatar size-md"
                      >
                        <svg
                          className="icon"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
                          />
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                        </svg>
                      </div>
                      <span>
                        Antonio Esposito
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Avatar.Avatar groups.Overlapping Avatars Small Overlapping Avatars 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="avatar-group-stacked"
    >
      <li>
        <a
          className="avatar size-sm"
          href={true}
        >
          <img
            alt="Arianna Rossi"
            src="https://randomuser.me/api/portraits/women/12.jpg"
          />
        </a>
      </li>
      <li>
        <a
          className="avatar size-sm"
          href={true}
        >
          <img
            alt="Giulio Neri"
            src="https://randomuser.me/api/portraits/men/13.jpg"
          />
        </a>
      </li>
      <li>
        <a
          className="avatar size-sm avatar-primary"
          href={true}
        >
          <p
            aria-hidden="true"
          >
            A
          </p>
          <span
            className="sr-only"
          >
            Andrea Gallo
          </span>
        </a>
      </li>
      <li>
        <a
          className="avatar size-sm avatar-secondary"
          href={true}
        >
          <p
            aria-hidden="true"
          >
            S
          </p>
          <span
            className="sr-only"
          >
            Sara Ghioni
          </span>
        </a>
      </li>
      <li>
        <a
          className="avatar size-sm avatar-green"
          href={true}
        >
          <p
            aria-hidden="true"
          >
            T
          </p>
          <span
            className="sr-only"
          >
            Tomasso Sordi
          </span>
        </a>
      </li>
      <li>
        <a
          className="avatar size-sm avatar-orange"
          href={true}
        >
          <p
            aria-hidden="true"
          >
            B
          </p>
          <span
            className="sr-only"
          >
            Barbera Tosi
          </span>
        </a>
      </li>
      <li>
        <a
          className="avatar size-sm avatar-red"
          href={true}
        >
          <p
            aria-hidden="true"
          >
            R
          </p>
          <span
            className="sr-only"
          >
            Roberto Milano
          </span>
        </a>
      </li>
      <li>
        <a
          className="avatar size-sm"
          href="#"
        >
          <svg
            className="icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </a>
      </li>
      <li>
        <div
          className="avatar size-sm avatar-dropdown"
        >
          <div
            className="dropdown"
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="btn btn-dropdown dropdown-toggle"
              data-toggle="dropdown"
              href="#"
              id="dropdownMenuLink"
              onClick={[Function]}
            >
              <span
                className="sr-only"
              >
                Visualizza altri 4 utenti
              </span>
              <span
                aria-hidden="true"
              >
                +4
              </span>
            </button>
            <div
              aria-hidden={true}
              className="dropdown-menu"
              role="menu"
              tabIndex="-1"
            >
              <div
                className="link-list-wrapper"
              >
                <ul
                  className="link-list"
                >
                  <li>
                    <a
                      className="list-item"
                    >
                      <div
                        className="avatar size-sm"
                      >
                        <img
                          alt="Mario Rossi"
                          src="https://randomuser.me/api/portraits/men/46.jpg"
                        />
                      </div>
                      <span>
                        Mario Rossi
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      className="list-item"
                    >
                      <div
                        className="avatar size-sm avatar-green"
                      >
                        <p
                          aria-hidden="true"
                        >
                          A
                        </p>
                      </div>
                      <span>
                        Arianna Gello
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      className="list-item"
                    >
                      <div
                        className="avatar size-sm avatar-primary"
                      >
                        <p
                          aria-hidden="true"
                        >
                          S
                        </p>
                      </div>
                      <span>
                        Sara Ghioni
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      className="list-item"
                    >
                      <div
                        className="avatar size-sm"
                      >
                        <svg
                          className="icon"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M21.9 21.1L16 15.3a8.3 8.3 0 002-5.3 8 8 0 10-8 8 8.3 8.3 0 005.3-2l5.8 5.9zM10 17a7 7 0 117-7 7 7 0 01-7 7z"
                          />
                          <path
                            d="M0 0h24v24H0z"
                            fill="none"
                          />
                        </svg>
                      </div>
                      <span>
                        Antonio Esposito
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Avatar.Behavior User Presence 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
      >
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-xl"
          >
            <img
              alt="Mario Rossi"
              src="https://randomuser.me/api/portraits/men/43.jpg"
            />
            <div
              className="avatar-presence active"
            >
              <span
                className="sr-only"
              >
                Presenza:attivo
              </span>
            </div>
          </div>
        </div>
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-xl"
          >
            <img
              alt="Luisa Neri"
              src="https://randomuser.me/api/portraits/women/41.jpg"
            />
            <div
              className="avatar-presence busy"
            >
              <svg
                className="icon icon-white"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 12.5H4v-1h16z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="sr-only"
              >
                Presenza: non disponibile
              </span>
            </div>
          </div>
        </div>
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-xl"
          >
            <img
              alt="Gioacchino Romani"
              src="https://randomuser.me/api/portraits/men/33.jpg"
            />
            <div
              className="avatar-presence hidden"
            >
              <span
                className="sr-only"
              >
                Presenza: invisible
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
      >
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-md"
          >
            <img
              alt="Ludovica Galli"
              src="https://randomuser.me/api/portraits/women/32.jpg"
            />
            <div
              className="avatar-presence busy"
            >
              <svg
                className="icon icon-white"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 12.5H4v-1h16z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="sr-only"
              >
                Presenza: non disponibile
              </span>
            </div>
          </div>
        </div>
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-lg"
          >
            <img
              alt="Ludovica Galli"
              src="https://randomuser.me/api/portraits/women/32.jpg"
            />
            <div
              className="avatar-presence busy"
            >
              <svg
                className="icon icon-white"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 12.5H4v-1h16z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="sr-only"
              >
                Presenza: non disponibile
              </span>
            </div>
          </div>
        </div>
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-xl"
          >
            <img
              alt="Ludovica Galli"
              src="https://randomuser.me/api/portraits/women/32.jpg"
            />
            <div
              className="avatar-presence busy"
            >
              <svg
                className="icon icon-white"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 12.5H4v-1h16z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="sr-only"
              >
                Presenza: non disponibile
              </span>
            </div>
          </div>
        </div>
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-xxl"
          >
            <img
              alt="Ludovica Galli"
              src="https://randomuser.me/api/portraits/women/32.jpg"
            />
            <div
              className="avatar-presence busy"
            >
              <svg
                className="icon icon-white"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 12.5H4v-1h16z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="sr-only"
              >
                Presenza: non disponibile
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Avatar.Behavior User Status 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
      >
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-xl"
          >
            <img
              alt="Mario Rossi"
              src="https://randomuser.me/api/portraits/men/43.jpg"
            />
            <div
              className="avatar-status approved"
            >
              <svg
                className="icon icon-white"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.6 16.9L4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="sr-only"
              >
                Stato: approvato
              </span>
            </div>
          </div>
        </div>
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-xl"
          >
            <img
              alt="Luisa Neri"
              src="https://randomuser.me/api/portraits/women/41.jpg"
            />
            <div
              className="avatar-status declined"
            >
              <svg
                className="icon icon-white"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.7 12l3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="sr-only"
              >
                Stato: respinto
              </span>
            </div>
          </div>
        </div>
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-xl"
          >
            <img
              alt="Gioacchino Romani"
              src="https://randomuser.me/api/portraits/men/33.jpg"
            />
            <div
              className="avatar-status notify"
            >
              <span
                className="sr-only"
              >
                Testa notifica
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="d-flex align-items-center justify-content-around flex-wrap flex-sm-nowrap"
      >
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-md"
          >
            <img
              alt="Ludovica Galli"
              src="https://randomuser.me/api/portraits/women/32.jpg"
            />
            <div
              className="avatar-status approved"
            >
              <svg
                className="icon icon-white"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.6 16.9L4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="sr-only"
              >
                Stato: approvato
              </span>
            </div>
          </div>
        </div>
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-lg"
          >
            <img
              alt="Ludovica Galli"
              src="https://randomuser.me/api/portraits/women/32.jpg"
            />
            <div
              className="avatar-status declined"
            >
              <svg
                className="icon icon-white"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.7 12l3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="sr-only"
              >
                Stato: respinto
              </span>
            </div>
          </div>
        </div>
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-xl"
          >
            <img
              alt="Ludovica Galli"
              src="https://randomuser.me/api/portraits/women/32.jpg"
            />
            <div
              className="avatar-status approved"
            >
              <svg
                className="icon icon-white"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.6 16.9L4 11.4l.8-.7 4.8 4.8 8.5-8.4.7.7z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="sr-only"
              >
                Stato: approvato
              </span>
            </div>
          </div>
        </div>
        <div
          className="avatar-wrapper"
        >
          <div
            className="avatar size-xxl"
          >
            <img
              alt="Ludovica Galli"
              src="https://randomuser.me/api/portraits/women/32.jpg"
            />
            <div
              className="avatar-status declined"
            >
              <svg
                className="icon icon-white"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.7 12l3.7 3.6-.8.8-3.6-3.7-3.6 3.7-.8-.8 3.7-3.6-3.7-3.6.8-.8 3.6 3.7 3.6-3.7.8.8z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="sr-only"
              >
                Stato: approvato
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
